@@ -39,7 +39,7 @@ This tab can therefore not be used.
     <td align="left" valign="top">
     <dtml-var "field.render(value)">
     </td>
-    <td><div class="form-element">
+    <td valign="top"><div class="form-element">
     <dtml-var "current_field.form.get_field(field.id).meta_type">
     </div></td>
   </tr>
